--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "v29",
   "scripts": {
+    "dev": "pnpm -F test dev",
+    "build": "pnpm -F @nailyjs/babel-plugin-reflection build",
+    "dev:build": "pnpm -F test build",
+    "dev:run": "pnpm -F test r",
     "format": "prettier --write ./",
     "lint": "eslint \"./**/*.ts\" --fix",
     "prepare": "husky install",
@@ -34,16 +38,31 @@
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@commitlint/types": "^17.8.1",
+    "@rollup/plugin-alias": "^5.1.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-swc": "^0.3.0",
+    "@rspack/cli": "^0.5.9",
+    "@rspack/core": "^0.5.9",
+    "@types/glob": "^8.1.0",
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "glob": "^10.3.10",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
+    "rollup": "^4.13.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "source-map-loader": "^5.0.0",
+    "source-map-support": "^0.5.21",
     "typescript": "^5.4.2",
-    "vitest": "^1.4.0"
+    "unplugin-swc": "^1.4.4",
+    "vitest": "^1.4.0",
+    "webpack-cli": "^5.1.4"
   }
 }
