--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "build": "pnpm -F @nailyjs/babel-plugin-reflection build",
     "dev:build": "pnpm -F test build",
     "dev:run": "pnpm -F test r",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "format": "prettier --write ./",
     "lint": "eslint \"./**/*.ts\" --fix",
     "prepare": "husky install",
@@ -34,6 +36,7 @@
   },
   "packageManager": "pnpm@8.8.0",
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.24.1",
     "@changesets/cli": "^2.27.1",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
@@ -47,6 +50,8 @@
     "@types/glob": "^8.1.0",
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@vitest/coverage-istanbul": "^1.4.0",
+    "@vitest/ui": "^1.4.0",
     "babel-loader": "^9.1.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -62,6 +67,7 @@
     "source-map-support": "^0.5.21",
     "typescript": "^5.4.2",
     "unplugin-swc": "^1.4.4",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.4.0",
     "webpack-cli": "^5.1.4"
   }
